--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,5 @@
 org.gradle.daemon=true
 org.gradle.jvmargs=-Xms128m -Xmx1500m
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 org.gradle.configureondemand=false
